sdk/storagecache/arm-storagecache/samples/v5/javascript/README.md
# client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for in some common scenarios.

| **File Name**                                                                         | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| ------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [ascOperationsGet.js][ascoperationsget]                                               | Gets the status of an asynchronous operation for the Azure HPC Cache x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2021-09-01/examples/AscOperations_Get.json                                                                                                                                                                                                                                                                                   |
| [ascOperationsGetSample.js][ascoperationsgetsample]                                   | Gets the status of an asynchronous operation for the Azure HPC Cache x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2022-01-01/examples/AscOperations_Get.json                                                                                                                                                                                                                                                                                   |
| [ascUsagesListSample.js][ascusageslistsample]                                         | Gets the quantity used and quota limit for resources x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2022-01-01/examples/AscResourceUsages_Get.json                                                                                                                                                                                                                                                                                               |
| [cachesCreateOrUpdate.js][cachescreateorupdate]                                       | Create or update a Cache. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2021-09-01/examples/Caches_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                                          |
| [cachesCreateOrUpdateLdapOnly.js][cachescreateorupdateldaponly]                       | Create or update a Cache. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2021-09-01/examples/Caches_CreateOrUpdate_ldap_only.json                                                                                                                                                                                                                                                                                                                |
| [cachesCreateOrUpdateSample.js][cachescreateorupdatesample]                           | Create or update a Cache. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2022-01-01/examples/Caches_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                                          |
| [cachesDebugInfo.js][cachesdebuginfo]                                                 | Tells a Cache to write generate debug info for support to process. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2021-09-01/examples/Caches_DebugInfo.json                                                                                                                                                                                                                                                                                      |
| [cachesDebugInfoSample.js][cachesdebuginfosample]                                     | Tells a Cache to write generate debug info for support to process. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2022-01-01/examples/Caches_DebugInfo.json                                                                                                                                                                                                                                                                                      |
| [cachesDelete.js][cachesdelete]                                                       | Schedules a Cache for deletion. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2021-09-01/examples/Caches_Delete.json                                                                                                                                                                                                                                                                                                                            |
| [cachesDeleteSample.js][cachesdeletesample]                                           | Schedules a Cache for deletion. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2022-01-01/examples/Caches_Delete.json                                                                                                                                                                                                                                                                                                                            |
| [cachesDnsRefresh.js][cachesdnsrefresh]                                               | Tells a storage target to refresh its DNS information. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2021-09-01/examples/StorageTargets_DnsRefresh.json                                                                                                                                                                                                                                                                                         |
| [cachesFlush.js][cachesflush]                                                         | Tells a Cache to write all dirty data to the Storage Target(s). During the flush, clients will see errors returned until the flush is complete. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2021-09-01/examples/Caches_Flush.json                                                                                                                                                                                                             |
| [cachesFlushSample.js][cachesflushsample]                                             | Tells a Cache to write all dirty data to the Storage Target(s). During the flush, clients will see errors returned until the flush is complete. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2022-01-01/examples/Caches_Flush.json                                                                                                                                                                                                             |
| [cachesGet.js][cachesget]                                                             | Returns a Cache. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2021-09-01/examples/Caches_Get.json                                                                                                                                                                                                                                                                                                                                              |
| [cachesGetSample.js][cachesgetsample]                                                 | Returns a Cache. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2022-01-01/examples/Caches_Get.json                                                                                                                                                                                                                                                                                                                                              |
| [cachesList.js][cacheslist]                                                           | Returns all Caches the user has access to under a subscription. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2021-09-01/examples/Caches_List.json                                                                                                                                                                                                                                                                                              |
| [cachesListByResourceGroup.js][cacheslistbyresourcegroup]                             | Returns all Caches the user has access to under a resource group. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2021-09-01/examples/Caches_ListByResourceGroup.json                                                                                                                                                                                                                                                                             |
| [cachesListByResourceGroupSample.js][cacheslistbyresourcegroupsample]                 | Returns all Caches the user has access to under a resource group. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2022-01-01/examples/Caches_ListByResourceGroup.json                                                                                                                                                                                                                                                                             |
| [cachesListSample.js][cacheslistsample]                                               | Returns all Caches the user has access to under a subscription. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2022-01-01/examples/Caches_List.json                                                                                                                                                                                                                                                                                              |
| [cachesStart.js][cachesstart]                                                         | Tells a Stopped state Cache to transition to Active state. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2021-09-01/examples/Caches_Start.json                                                                                                                                                                                                                                                                                                  |
| [cachesStartSample.js][cachesstartsample]                                             | Tells a Stopped state Cache to transition to Active state. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2022-01-01/examples/Caches_Start.json                                                                                                                                                                                                                                                                                                  |
| [cachesStop.js][cachesstop]                                                           | Tells an Active Cache to transition to Stopped state. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2021-09-01/examples/Caches_Stop.json                                                                                                                                                                                                                                                                                                        |
| [cachesStopSample.js][cachesstopsample]                                               | Tells an Active Cache to transition to Stopped state. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2022-01-01/examples/Caches_Stop.json                                                                                                                                                                                                                                                                                                        |
| [cachesUpdate.js][cachesupdate]                                                       | Update a Cache instance. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2021-09-01/examples/Caches_Update.json                                                                                                                                                                                                                                                                                                                                   |
| [cachesUpdateLdapOnly.js][cachesupdateldaponly]                                       | Update a Cache instance. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2021-09-01/examples/Caches_Update_ldap_only.json                                                                                                                                                                                                                                                                                                                         |
| [cachesUpdateSample.js][cachesupdatesample]                                           | Update a Cache instance. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2022-01-01/examples/Caches_Update.json                                                                                                                                                                                                                                                                                                                                   |
| [cachesUpgradeFirmware.js][cachesupgradefirmware]                                     | Upgrade a Cache's firmware if a new version is available. Otherwise, this operation has no effect. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2021-09-01/examples/Caches_UpgradeFirmware.json                                                                                                                                                                                                                                                |
| [cachesUpgradeFirmwareSample.js][cachesupgradefirmwaresample]                         | Upgrade a Cache's firmware if a new version is available. Otherwise, this operation has no effect. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2022-01-01/examples/Caches_UpgradeFirmware.json                                                                                                                                                                                                                                                |
| [operationsListSample.js][operationslistsample]                                       | Lists all of the available Resource Provider operations. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2022-01-01/examples/Operations_List.json                                                                                                                                                                                                                                                                                                 |
| [skusList.js][skuslist]                                                               | Get the list of StorageCache.Cache SKUs available to this subscription. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2021-09-01/examples/Skus_List.json                                                                                                                                                                                                                                                                                        |
| [skusListSample.js][skuslistsample]                                                   | Get the list of StorageCache.Cache SKUs available to this subscription. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2022-01-01/examples/Skus_List.json                                                                                                                                                                                                                                                                                        |
| [storageTargetFlushSample.js][storagetargetflushsample]                               | Tells the cache to write all dirty data to the Storage Target's backend storage. Client requests to this storage target's namespace will return errors until the flush operation completes. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2022-01-01/examples/StorageTargets_Flush.json                                                                                                                                                         |
| [storageTargetInvalidateSample.js][storagetargetinvalidatesample]                     | Invalidate all cached data for a storage target. Cached files are discarded and fetched from the back end on the next request. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2022-01-01/examples/StorageTargets_Invalidate.json                                                                                                                                                                                                                 |
| [storageTargetResumeSample.js][storagetargetresumesample]                             | Resumes client access to a previously suspended storage target. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2022-01-01/examples/StorageTargets_Resume.json                                                                                                                                                                                                                                                                                    |
| [storageTargetSuspendSample.js][storagetargetsuspendsample]                           | Suspends client access to a storage target. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2022-01-01/examples/StorageTargets_Suspend.json                                                                                                                                                                                                                                                                                                       |
| [storageTargetsCreateOrUpdate.js][storagetargetscreateorupdate]                       | Create or update a Storage Target. This operation is allowed at any time, but if the Cache is down or unhealthy, the actual creation/modification of the Storage Target may be delayed until the Cache is healthy again. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2021-09-01/examples/StorageTargets_CreateOrUpdate.json                                                                                                                   |
| [storageTargetsCreateOrUpdateBlobNfs.js][storagetargetscreateorupdateblobnfs]         | Create or update a Storage Target. This operation is allowed at any time, but if the Cache is down or unhealthy, the actual creation/modification of the Storage Target may be delayed until the Cache is healthy again. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2021-09-01/examples/StorageTargets_CreateOrUpdate_BlobNfs.json                                                                                                           |
| [storageTargetsCreateOrUpdateNoJunctions.js][storagetargetscreateorupdatenojunctions] | Create or update a Storage Target. This operation is allowed at any time, but if the Cache is down or unhealthy, the actual creation/modification of the Storage Target may be delayed until the Cache is healthy again. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2021-09-01/examples/StorageTargets_CreateOrUpdate_NoJunctions.json                                                                                                       |
| [storageTargetsCreateOrUpdateSample.js][storagetargetscreateorupdatesample]           | Create or update a Storage Target. This operation is allowed at any time, but if the Cache is down or unhealthy, the actual creation/modification of the Storage Target may be delayed until the Cache is healthy again. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2022-01-01/examples/StorageTargets_CreateOrUpdate.json                                                                                                                   |
| [storageTargetsDelete.js][storagetargetsdelete]                                       | Removes a Storage Target from a Cache. This operation is allowed at any time, but if the Cache is down or unhealthy, the actual removal of the Storage Target may be delayed until the Cache is healthy again. Note that if the Cache has data to flush to the Storage Target, the data will be flushed before the Storage Target will be deleted. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2021-09-01/examples/StorageTargets_Delete.json |
| [storageTargetsDeleteSample.js][storagetargetsdeletesample]                           | Removes a Storage Target from a Cache. This operation is allowed at any time, but if the Cache is down or unhealthy, the actual removal of the Storage Target may be delayed until the Cache is healthy again. Note that if the Cache has data to flush to the Storage Target, the data will be flushed before the Storage Target will be deleted. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2022-01-01/examples/StorageTargets_Delete.json |
| [storageTargetsDnsRefreshSample.js][storagetargetsdnsrefreshsample]                   | Tells a storage target to refresh its DNS information. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2022-01-01/examples/StorageTargets_DnsRefresh.json                                                                                                                                                                                                                                                                                         |
| [storageTargetsFlush.js][storagetargetsflush]                                         | Tells the cache to write all dirty data to the Storage Target's backend storage. Client requests to this storage target's namespace will return errors until the flush operation completes. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2021-09-01/examples/StorageTargets_Flush.json                                                                                                                                                         |
| [storageTargetsGet.js][storagetargetsget]                                             | Returns a Storage Target from a Cache. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2021-09-01/examples/StorageTargets_Get.json                                                                                                                                                                                                                                                                                                                |
| [storageTargetsGetSample.js][storagetargetsgetsample]                                 | Returns a Storage Target from a Cache. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2022-01-01/examples/StorageTargets_Get.json                                                                                                                                                                                                                                                                                                                |
| [storageTargetsList.js][storagetargetslist]                                           | Returns a list of Storage Targets for the specified Cache. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2021-09-01/examples/StorageTargets_ListByCache.json                                                                                                                                                                                                                                                                                    |
| [storageTargetsListByCacheSample.js][storagetargetslistbycachesample]                 | Returns a list of Storage Targets for the specified Cache. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2022-01-01/examples/StorageTargets_ListByCache.json                                                                                                                                                                                                                                                                                    |
| [storageTargetsResume.js][storagetargetsresume]                                       | Resumes client access to a previously suspended storage target. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2021-09-01/examples/StorageTargets_Resume.json                                                                                                                                                                                                                                                                                    |
| [storageTargetsSuspend.js][storagetargetssuspend]                                     | Suspends client access to a storage target. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2021-09-01/examples/StorageTargets_Suspend.json                                                                                                                                                                                                                                                                                                       |
| [usageModelsList.js][usagemodelslist]                                                 | Get the list of Cache Usage Models available to this subscription. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2021-09-01/examples/UsageModels_List.json                                                                                                                                                                                                                                                                                      |
| [usageModelsListSample.js][usagemodelslistsample]                                     | Get the list of Cache Usage Models available to this subscription. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2022-01-01/examples/UsageModels_List.json                                                                                                                                                                                                                                                                                      |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://nodejs.org/about/releases/).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node ascOperationsGet.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx cross-env  node ascOperationsGet.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[ascoperationsget]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/ascOperationsGet.js
[ascoperationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/ascOperationsGetSample.js
[ascusageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/ascUsagesListSample.js
[cachescreateorupdate]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/cachesCreateOrUpdate.js
[cachescreateorupdateldaponly]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/cachesCreateOrUpdateLdapOnly.js
[cachescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/cachesCreateOrUpdateSample.js
[cachesdebuginfo]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/cachesDebugInfo.js
[cachesdebuginfosample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/cachesDebugInfoSample.js
[cachesdelete]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/cachesDelete.js
[cachesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/cachesDeleteSample.js
[cachesdnsrefresh]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/cachesDnsRefresh.js
[cachesflush]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/cachesFlush.js
[cachesflushsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/cachesFlushSample.js
[cachesget]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/cachesGet.js
[cachesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/cachesGetSample.js
[cacheslist]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/cachesList.js
[cacheslistbyresourcegroup]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/cachesListByResourceGroup.js
[cacheslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/cachesListByResourceGroupSample.js
[cacheslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/cachesListSample.js
[cachesstart]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/cachesStart.js
[cachesstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/cachesStartSample.js
[cachesstop]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/cachesStop.js
[cachesstopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/cachesStopSample.js
[cachesupdate]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/cachesUpdate.js
[cachesupdateldaponly]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/cachesUpdateLdapOnly.js
[cachesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/cachesUpdateSample.js
[cachesupgradefirmware]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/cachesUpgradeFirmware.js
[cachesupgradefirmwaresample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/cachesUpgradeFirmwareSample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/operationsListSample.js
[skuslist]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/skusList.js
[skuslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/skusListSample.js
[storagetargetflushsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/storageTargetFlushSample.js
[storagetargetinvalidatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/storageTargetInvalidateSample.js
[storagetargetresumesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/storageTargetResumeSample.js
[storagetargetsuspendsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/storageTargetSuspendSample.js
[storagetargetscreateorupdate]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/storageTargetsCreateOrUpdate.js
[storagetargetscreateorupdateblobnfs]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/storageTargetsCreateOrUpdateBlobNfs.js
[storagetargetscreateorupdatenojunctions]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/storageTargetsCreateOrUpdateNoJunctions.js
[storagetargetscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/storageTargetsCreateOrUpdateSample.js
[storagetargetsdelete]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/storageTargetsDelete.js
[storagetargetsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/storageTargetsDeleteSample.js
[storagetargetsdnsrefreshsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/storageTargetsDnsRefreshSample.js
[storagetargetsflush]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/storageTargetsFlush.js
[storagetargetsget]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/storageTargetsGet.js
[storagetargetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/storageTargetsGetSample.js
[storagetargetslist]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/storageTargetsList.js
[storagetargetslistbycachesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/storageTargetsListByCacheSample.js
[storagetargetsresume]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/storageTargetsResume.js
[storagetargetssuspend]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/storageTargetsSuspend.js
[usagemodelslist]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/usageModelsList.js
[usagemodelslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v5/javascript/usageModelsListSample.js
[apiref]: https://docs.microsoft.com/javascript/api/@azure/arm-storagecache?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/storagecache/arm-storagecache/README.md
